--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -71,7 +71,10 @@ button:focus {outline:0;}
 }
 
 .section_title {
-	@apply font-display text-3xl flex items-center font-bold text-left pb-2 mb-3 border-b border-gray-200;
+	@apply font-display text-3xl flex items-center font-bold text-left pb-2 mb-3;
+  line-height: 2.2rem;
+  font-family: "Raleway";
+  font-weight: 300;
 }
 
 .section_title-md {
@@ -358,11 +361,11 @@ button:focus {outline:0;}
 	}
 
 	.action_container {
-		@apply mt-6 ;
+		@apply mt-6 mb-6 ;
 	}
 
 	a.action {
-		@apply p-3 mr-2 border border-gray-200;
+		@apply p-3 mr-2 border border-gray-300;
 	  font-family: "Raleway";
 	  font-weight: 300;
 	  color: white;
@@ -625,7 +628,7 @@ button:focus {outline:0;}
 	}
 
 	.section_image {
-		@apply border border-gray-200 mt-4;
+		@apply mt-4;
 		flex-shrink: 0;
 	}
 
